@@ -19,6 +19,7 @@ package demetra.tsprovider.legacy;
 import demetra.design.DemetraPlusLegacy;
 import demetra.design.Immutable;
 import java.util.Arrays;
+import java.util.Base64;
 import java.util.Iterator;
 
 @DemetraPlusLegacy
@@ -166,7 +167,7 @@ final class LegacyId implements Comparable<LegacyId>, Iterable<String> {
                     final StringBuilder sb = new StringBuilder(o[0]);
                     for (int i = 1; i < o.length; i++) {
                         sb.append(SEP);
-                        sb.append(javax.xml.bind.DatatypeConverter.printBase64Binary(o[i].getBytes()));
+                        sb.append(Base64.getEncoder().encodeToString(o[i].getBytes()));
                     }
                     return sb.toString();
                 }
@@ -177,7 +178,7 @@ final class LegacyId implements Comparable<LegacyId>, Iterable<String> {
                 String[] splitResult = o.split(SEP);
                 for (int i = 0; i < splitResult.length; i++) {
                     try {
-                        splitResult[i] = new String(javax.xml.bind.DatatypeConverter.parseBase64Binary(splitResult[i]));
+                        splitResult[i] = new String(Base64.getDecoder().decode(splitResult[i]));
                     } catch (Exception e) {
                     }
                 }
